--- a/frontend/src/pages/Catalogo/Catalogo.css
+++ b/frontend/src/pages/Catalogo/Catalogo.css
@@ -1,16 +1,21 @@
-.contentContainer {
+.catalog-content {
     width: 100vw;
     padding: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 3vh;
+    justify-content: start;
+    margin-top: 1vh;
     align-self: top;
     max-width: fill-available;
     max-width: stretch;
     max-width: -webkit-fill-available;
     max-width: -moz-available;
+    min-height: 80vh;
+}
+
+.root {
+    justify-self: top;
 }
 
 .product-info-container {
@@ -50,4 +55,22 @@ h1, h2, h3, h4, h5, h6
   
 .zoom:hover {
     transform: scale(1.1);
+}
+
+
+
+.filtros-container{
+    display: flex;
+    flex-direction: column;
+    align-items: top;
+    justify-content: top;
+    width: 100%;
+    height:max-content;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.categoria-form{
+    text-align: left;
 }
