--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -32,6 +32,7 @@
     flex-direction: column;
     align-items: left;
     justify-content: center;
+    overflow-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6
