--- a/frontend/src/pages/Producto/Producto.css
+++ b/frontend/src/pages/Producto/Producto.css
@@ -13,6 +13,14 @@
     max-width: -moz-available;
 }
 
+.product-root {
+    justify-self: top;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    padding-top: 7vh;
+}
+
 .product-info-container {
     display: flex;
     flex-direction: column;
