--- a/frontend/src/pages/Catalogo/Catalogo.css
+++ b/frontend/src/pages/Catalogo/Catalogo.css
@@ -14,8 +14,12 @@
     min-height: 80vh;
 }
 
-.root {
+.catalog-root {
     justify-self: top;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    padding-top: 7vh;
 }
 
 .product-info-container {
