--- a/frontend/src/pages/Profiles/ProfileUser.css
+++ b/frontend/src/pages/Profiles/ProfileUser.css
@@ -1,5 +1,5 @@
 .aux{
-    position:relative;
+    
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -53,6 +53,7 @@
     top: 40%;
     left: 25%; 
     width: 60%;    
+    text-align: center;
 }
 
 .profile-info h6{
