--- a/frontend/src/pages/Carrito/Carrito.css
+++ b/frontend/src/pages/Carrito/Carrito.css
@@ -52,7 +52,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     border: 1px solid #e0e0e0;
     border-radius: 5px;
 }
